samples/_failures_safe/1761510420_c207c7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fcecaa7.c: In function ‘main’:
./samples/SAFE/__tmp_2fcecaa7.c:168:9: error: expected declaration or statement at end of input
  168 |         printf("5. Exit\n");
      |         ^~~~~~
./samples/SAFE/__tmp_2fcecaa7.c:168:9: error: expected declaration or statement at end of input
